--- a/package.json
+++ b/package.json
@@ -1,13 +1,35 @@
 {
-  "name": "helix-pi-editor",
-  "version": "0.0.1",
-  "description": "Web editor for Helix Pi",
-  "dependencies": {
-    "babel": "^5.2.15",
-    "express": "^4.12.3",
-    "lodash": "^3.8.0"
-  },
-  "scripts": {
-    "test": "mocha --compilers js:babel/register"
-  }
+    "name": "helix-pi-editor",
+    "version": "0.1.0",
+    "filenameBase": "helixpieditor",
+    "description": "Description for HelixPiEditor.",
+    "author": {
+        "name" : "",
+        "email" : ""
+        },
+
+    "homepage": "http://kiwijs.org/",
+    "bugs": "",
+    "license": "MIT",
+    "licenseUrl": "",
+
+    "repository": {
+        "type": "git",
+        "url": ""
+    },
+
+    "main": "src",
+
+    "dependencies": {
+      "babel": "^5.2.15",
+      "express": "^4.12.3",
+      "lodash": "^3.8.0",
+    },
+    "devDependencies": {
+        "grunt": "~0.4.x",
+        "grunt-contrib-uglify": "0.2.x",
+        "grunt-contrib-copy":  "0.4.x",
+        "grunt-contrib-concat" : "latest",
+        "grunt-contrib-connect": "~0.3.0"
+    }
 }
