--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "dependencies": {
       "babel": "^5.2.15",
       "express": "^4.12.3",
-      "lodash": "^3.8.0",
+      "lodash": "^3.8.0"
     },
     "devDependencies": {
         "grunt": "~0.4.x",
