--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "main": "src",
   "dependencies": {
     "babel": "^5.2.15",
+    "browserify": "^10.1.3",
     "express": "^4.12.3",
     "helix-pi": "git://github.com/widdershin/helix-pi",
     "lodash": "^3.8.0"
@@ -31,6 +32,7 @@
     "grunt-contrib-uglify": "0.2.x"
   },
   "scripts": {
-    "start": "./node_modules/.bin/babel-node ./index.js"
+    "start": "./node_modules/.bin/babel-node ./index.js",
+    "prestart": "./node_modules/.bin/browserify --debug bundle.js | ./node_modules/.bin/babel > public/bundle.js"
   }
 }
