--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "grunt-contrib-uglify": "0.2.x"
   },
   "scripts": {
+    "preinstall": "npm run bundle",
     "start": "./node_modules/.bin/babel-node ./index.js",
     "bundle": "cat bundle.js | ./node_modules/.bin/browserify - | ./node_modules/.bin/babel -o public/bundle.js"
   }
