--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "scripts": {
     "preinstall": "npm run bundle",
     "start": "./node_modules/.bin/babel-node ./index.js",
-    "bundle": "cat bundle.js | ./node_modules/.bin/browserify - | ./node_modules/.bin/babel -o public/bundle.js"
+    "bundle": "cat bundle.js | browserify - | babel -o public/bundle.js"
   },
   "engines": {
     "node": "0.10.x"
