--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "licenseUrl": "",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git://github.com/widdershin/helix-pi-editor.git"
   },
   "main": "src",
   "dependencies": {
@@ -21,10 +21,13 @@
     "browserify": "^10.1.3",
     "express": "^4.12.3",
     "helix-pi": "widdershin/helix-pi",
-    "lodash": "^3.8.0"
+    "lodash": "^3.8.0",
+    "webworkify": "^1.0.2",
+    "workerify": "^0.3.0"
   },
   "devDependencies": {
-    "babelify": "^6.1.0",
+    "babelify": "^6.1.3",
+    "browserify": "^10.2.6",
     "grunt": "~0.4.x",
     "grunt-contrib-concat": "latest",
     "grunt-contrib-connect": "~0.3.0",
@@ -34,13 +37,9 @@
   "scripts": {
     "postinstall": "npm run bundle",
     "start": "./node_modules/.bin/babel-node ./index.js",
-    "bundle": "cat bundle.js | browserify - | babel -o public/bundle.js"
+    "bundle": "cat bundle.js | browserify - | babel -o public/bundle.js && browserify -s window worker.js | babel -o public/worker.js"
   },
   "engines": {
     "node": "0.10.x"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/widdershin/helix-pi-editor.git"
   }
 }
