--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "main": "src",
   "dependencies": {
     "babel": "^5.2.15",
+    "babelify": "^6.3.0",
     "browserify": "^10.1.3",
     "express": "^4.12.3",
     "helix-pi": "widdershin/helix-pi",
